NULL = 

nobase_include_HEADERS = ZMap/sysdep.h \
ZMap/zmap.h \
ZMap/zmapBase.h \
ZMap/zmapCmdLineArgs.h \
ZMap/zmapConfig.h \
ZMap/zmapConfigDir.h \
ZMap/zmapConfigIni.h \
ZMap/zmapConfigKeyboard.h \
ZMap/zmapConfigStrings.h \
ZMap/zmapConfigStanzaStructs.h \
ZMap/zmapConfigStyleDefaults.h \
ZMap/zmapControl.h \
ZMap/zmapDAS.h \
ZMap/zmapDNA.h \
ZMap/zmapDraw.h \
ZMap/zmapEnum.h \
ZMap/zmapFASTA.h \
ZMap/zmapFeature.h \
ZMap/zmapGFF.h \
ZMap/zmapGLibUtils.h \
ZMap/zmapGUITreeView.h \
ZMap/zmapIO.h \
ZMap/zmapManager.h \
ZMap/zmapNavigator.h \
ZMap/zmapNavigatorStippleG.xbm \
ZMap/zmapPeptide.h \
ZMap/zmapReadLine.h \
ZMap/zmapSeqBitmap.h \
ZMap/zmapSequence.h \
ZMap/zmapServerProtocol.h \
ZMap/zmapString.h \
ZMap/zmapStyle.h \
ZMap/zmapThreads.h \
ZMap/zmapUrl.h \
ZMap/zmapUrlUtils.h \
ZMap/zmapUtils.h \
ZMap/zmapUtilsCheck.h \
ZMap/zmapUtilsDebug.h \
ZMap/zmapUtilsFoo.h \
ZMap/zmapUtilsGUI.h \
ZMap/zmapUtilsHandle.h \
ZMap/zmapUtilsLog.h \
ZMap/zmapUtilsLogical.h \
ZMap/zmapUtilsMesg.h \
ZMap/zmapUtilsXRemote.h \
ZMap/zmapView.h \
ZMap/zmapWebPages.h \
ZMap/zmapWindow.h \
ZMap/zmapWindowDrawFeatures.h \
ZMap/zmapWindowNavigator.h \
ZMap/zmapXML.h \
ZMap/zmapXMLHandler.h \
ZMap/zmapXRemote.h \
$(NULL)


