NULL =

nobase_include_HEADERS = ZMap/sysdep.h \
ZMap/safe-ctype.h \
ZMap/zmap.h \
ZMap/zmapAppRemote.h \
ZMap/zmapAppServices.h \
ZMap/zmapBase.h \
ZMap/zmapCmdLineArgs.h \
ZMap/zmapConfig.h \
ZMap/zmapConfigDir.h \
ZMap/zmapConfigIni.h \
ZMap/zmapConfigKeyboard.h \
ZMap/zmapConfigStrings.h \
ZMap/zmapConfigStanzaStructs.h \
ZMap/zmapConfigStyleDefaults.h \
ZMap/zmapControl.h \
ZMap/zmapControlImportFile.h \
ZMap/zmapDAS.h \
ZMap/zmapDNA.h \
ZMap/zmapDraw.h \
ZMap/zmapEnum.h \
ZMap/zmapFASTA.h \
ZMap/zmapFeature.h \
ZMap/zmapGFF.h \
ZMap/zmapGLibUtils.h \
ZMap/zmapGUITreeView.h \
ZMap/zmapIO.h \
ZMap/zmapManager.h \
ZMap/zmapNavigatorStippleG.xbm \
ZMap/zmapPeptide.h \
ZMap/zmapReadLine.h \
ZMap/zmapRemoteCommand.h \
ZMap/zmapRemoteControl.h \
ZMap/zmapRemoteProtocol.h \
ZMap/zmapSeqBitmap.h \
ZMap/zmapSequence.h \
ZMap/zmapServerProtocol.h \
ZMap/zmapSO.h \
ZMap/zmapSkipList.h\
ZMap/zmapString.h \
ZMap/zmapStyle.h \
ZMap/zmapThreads.h \
ZMap/zmapUrl.h \
ZMap/zmapUrlOptions.h \
ZMap/zmapUrlUtils.h \
ZMap/zmapUtils.h \
ZMap/zmapUtilsCheck.h \
ZMap/zmapUtilsDebug.h \
ZMap/zmapUtilsFoo.h \
ZMap/zmapUtilsGUI.h \
ZMap/zmapUtilsHandle.h \
ZMap/zmapUtilsLog.h \
ZMap/zmapUtilsLogical.h \
ZMap/zmapUtilsMesg.h \
ZMap/zmapView.h \
ZMap/zmapWebPages.h \
ZMap/zmapWindow.h \
ZMap/zmapWindowDrawFeatures.h \
ZMap/zmapWindowNavigator.h \
ZMap/zmapXML.h \
ZMap/zmapXMLHandler.h \
$(NULL)

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/include/Makefile.in


