NULL =

nobase_include_HEADERS = ZMap/sysdep.h \
ZMap/safe-ctype.h \
ZMap/zmap.hpp \
ZMap/zmapAppRemote.hpp \
ZMap/zmapAppServices.hpp \
ZMap/zmapBase.hpp \
ZMap/zmapCmdLineArgs.hpp \
ZMap/zmapConfig.hpp \
ZMap/zmapConfigDir.hpp \
ZMap/zmapConfigIni.hpp \
ZMap/zmapConfigKeyboard.hpp \
ZMap/zmapConfigStrings.hpp \
ZMap/zmapConfigStanzaStructs.hpp \
ZMap/zmapConfigStyleDefaults.hpp \
ZMap/zmapControl.hpp \
ZMap/zmapDAS.hpp \
ZMap/zmapDNA.hpp \
ZMap/zmapDraw.hpp \
ZMap/zmapEnsemblUtils.hpp \
ZMap/zmapEnum.hpp \
ZMap/zmapFASTA.hpp \
ZMap/zmapFeature.hpp \
ZMap/zmapFeatureLoadDisplay.hpp \
ZMap/zmapGFF.hpp \
ZMap/zmapGFFStringUtils.hpp \
ZMap/zmapGLibUtils.hpp \
ZMap/zmapGUITreeView.hpp \
ZMap/zmapIO.hpp \
ZMap/zmapMLF.hpp \
ZMap/zmapNavigatorStippleG.xbm \
ZMap/zmapPeptide.hpp \
ZMap/zmapReadLine.hpp \
ZMap/zmapRemoteCommand.hpp \
ZMap/zmapRemoteControl.hpp \
ZMap/zmapRemoteProtocol.hpp \
ZMap/zmapSeqBitmap.hpp \
ZMap/zmapSequence.hpp \
ZMap/zmapDataSource.hpp \
ZMap/zmapServerProtocol.hpp \
ZMap/zmapSO.hpp \
ZMap/zmapSOParser.hpp \
ZMap/zmapSkipList.hpp\
ZMap/zmapString.hpp \
ZMap/zmapStyle.hpp \
ZMap/zmapStyleTree.hpp \
ZMap/zmapThreads.hpp \
ZMap/zmapUrl.hpp \
ZMap/zmapUrlOptions.hpp \
ZMap/zmapUrlUtils.hpp \
ZMap/zmapUtils.hpp \
ZMap/zmapUtilsCheck.hpp \
ZMap/zmapUtilsDebug.hpp \
ZMap/zmapUtilsFoo.hpp \
ZMap/zmapUtilsGUI.hpp \
ZMap/zmapUtilsHandle.hpp \
ZMap/zmapUtilsLog.hpp \
ZMap/zmapUtilsLogical.hpp \
ZMap/zmapUtilsMesg.hpp \
ZMap/zmapView.hpp \
ZMap/zmapWebPages.hpp \
ZMap/zmapWindow.hpp \
ZMap/zmapWindowDrawFeatures.hpp \
ZMap/zmapWindowNavigator.hpp \
ZMap/zmapXML.hpp \
ZMap/zmapXMLHandler.hpp \
$(NULL)

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/include/Makefile.in


